--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,30 @@
 }
 
 
+
+.zone-info{ 
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: end;
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2rem;
+    margin-top: 6rem;
+    font-weight: 600;
+    padding: 2rem;
+    background-color: rgba(255, 255, 255, 0.6);
+    position: fixed;
+    z-index: 2000;
+    border-radius: 2rem;
+    box-shadow: 0px 1px 10px black  ;
+}
+
 /* FORM */
 
 .form-div {
